# syla-ai-envelope

./: .env.example  .profile  Makefile  README.md  docker-compose-rag.yml  docker-compose.yaml  package-lock.json  package.json  private_key.pem  public_key.pem
app/: pyproject.toml  requirements.txt
app/src/: .env.example
app/src/application/api/: main.py  schemas.py
app/src/configs/: config.py
app/src/logic/: __init__.py
app/src/migrations/: env.py
auth/: alembic.ini  pyproject.toml
auth/src/: .env.example
auth/src/configs/: config.py
auth/src/logic/: __init__.py
design/: .$c4.drawio.bkp  c4.drawio  diagrams.txt
design/auth/: auth.plantuml
design/main-app/: app.plantuml
design/retriever/: retriever.plantuml
dockerfiles/: app.Dockerfile  auth.Dockerfile  rag.retriever.Dockerfile
frontend/: docker-compose.yaml  next.config.ts  nginx.conf  openapi.json  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  globals.css~  layout.tsx  page.tsx
rag/: pyproject.toml
rag/chat/: Dockerfile
rag/chat/requirements/: base.txt
rag/chat/src/: main.py  text.txt
rag/retriever/: config.py  main.py  pyproject.toml  utils.py
rag/retriever/api/: __init__.py
rag/retriever/api/v1/: __init__.py  router.py
rag/retriever/data/: New document 4.json  updated_main_text.txt
rag/retriever/encoders/: __init__.py  biencoder.py  crossencoder.py  sparse_linear.pt  utils.py
rag/retriever/schemas/: __init__.py  result.py
rag/retriever/services/: __init__.py  retrieving_service.py
(+141 files in other folders)
