[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Egorov E.A. <emelya.kara@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.0"
pydantic-settings = "^2.6.0"
torch = "^2.5.0"
flagembedding = "^1.2.11"
qdrant-client = "^1.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
